--- a/Application/Admin/View/Index/menu.html
+++ b/Application/Admin/View/Index/menu.html
@@ -127,13 +127,22 @@ body {
             商品管理
                 <ul>
                     <li class="menu-item"><a href="__ROOT__/admin/goods/lst" target="main-frame">商品列表</a></li>
-                    <li class="menu-item"><a href="__ROOT__/admin/goods/add" target="main-frame">添加新商品</a></li>
+                    <li class="menu-item"><a href="__ROOT__/admin/goods/add" target="main-frame">商品添加</a></li>
                     <li class="menu-item"><a href="categoryList.html" target="main-frame">商品分类</a></li>
                     <li class="menu-item"><a href="brandList.html" target="main-frame">商品品牌</a></li>
                     <li class="menu-item"><a href="goodsTrash.html" target="main-frame">商品回收站</a></li>
                 </ul>
             </li>
-
+            <li class="explode" key="03_brand" name="menu">
+                品牌管理
+                <ul>
+                    <li class="menu-item"><a href="__ROOT__/admin/brand/lst" target="main-frame">品牌列表</a></li>
+                    <li class="menu-item"><a href="__ROOT__/admin/brand/add" target="main-frame">品牌添加</a></li>
+                    <li class="menu-item"><a href="orderAdd.html" target="main-frame">添加订单</a></li>
+                    <li class="menu-item"><a href="delivery_list.html" target="main-frame">发货单列表</a></li>
+                    <li class="menu-item"><a href="back_list.html" target="main-frame">退货单列表</a></li>
+                </ul>
+            </li>
             <li class="explode" key="04_order" name="menu">
             订单管理
                 <ul>
