--- a/Application/Admin/View/Goods/add.html
+++ b/Application/Admin/View/Goods/add.html
@@ -10,6 +10,19 @@
         <form enctype="multipart/form-data" action="__SELF__" method="post">
             <table width="90%" id="general-table" align="center">
                 <tr>
+                    <td class="label">所在品牌：</td>
+                    <td>
+                        <select name="brand_id">
+                            <option value="">请选择</option>
+                            <?php foreach($brandData as $key => $value):?>
+                            <option value="<?php echo $value['id'];?>">
+                                <?php echo $value['brand_name'];?>
+                            </option>
+                            <?php endforeach;?>
+                        </select>
+                    </td>
+                </tr>
+                <tr>
                     <td class="label">商品名称：</td>
                     <td><input type="text" name="goods_name" value="" size="30"/>
                         <span class="require-field">*</span></td>
