--- a/Application/Admin/View/MemberLevel/add.html
+++ b/Application/Admin/View/MemberLevel/add.html
@@ -3,25 +3,25 @@
     <form name="main_form" method="POST" action="__SELF__" enctype="multipart/form-data">
         <table align="center" valign="middle" cellspacing="1" cellpadding="3" width="100%">
             <tr>
-                <td class="label">品牌名称：</td>
+                <td class="label">级别名称：</td>
                 <td>
-                    <input type="text" name="brand_name" value=""/>
+                    <input type="text" name="level_name" value=""/>
                 </td>
             </tr>
             <tr>
-                <td class="label">官方网址：</td>
+                <td class="label">积分下限：</td>
                 <td>
-                    <input type="text" name="site_url" value=""/>
+                    <input type="text" name="jifen_bottom" value=""/>
                 </td>
             </tr>
             <tr>
-                <td class="label">品牌Logo：</td>
+                <td class="label">积分上限：</td>
                 <td>
-                    <input type="file" name="logo"/>
+                    <input type="text" name="jifen_top" value=""/>
                 </td>
             </tr>
-            <tr>
-                <td colspan="99" align="center">
+            <tr align="center">
+                <td colspan="99">
                     <input type="submit" class="button" value=" 确定 "/>
                     <input type="reset" class="button" value=" 重置 "/>
                 </td>
