--- a/Application/Admin/View/Goods/add.html
+++ b/Application/Admin/View/Goods/add.html
@@ -39,7 +39,7 @@
                     <td class="label">会员价格：</td>
                     <td>
                         <?php foreach($mlData as $k => $v):?>
-                        <?php echo $v['level_name']?>:&nbsp;¥&nbsp;<input type="text" name="member_price[]" size="8"/>元<br/>
+                        <?php echo $v['level_name']?>:&nbsp;¥&nbsp;<input type="text" name="member_price[<?php echo $v['id'];?>]" size="8"/>元<br/>
                         <?php endforeach;?>
                     </td>
                 </tr>
