--- a/Application/Admin/View/Category/add.html
+++ b/Application/Admin/View/Category/add.html
@@ -19,6 +19,13 @@
                     <input type='text' name='cat_name' maxlength="20" value='' size='27'/> <font color="red">*</font>
                 </td>
             </tr>
+            <tr>
+                <td class="label">推荐到楼层：</td>
+                <td>
+                    <input type="radio" name="is_floor" value="是" /> 是
+                    <input type="radio" name="is_floor" value="否" checked="checked" /> 否
+                </td>
+            </tr>
         </table>
         <div class="button-div">
             <input type="submit" value="确定"/>
