--- a/Application/Admin/View/Category/edit.html
+++ b/Application/Admin/View/Category/edit.html
@@ -11,12 +11,13 @@
                         <option value="0">顶级分类</option><!--这个可以不做IF判定，原因是这是第一个必定会显示出来，在没有任何被选择的情况下 -->
                         <?php
                             foreach($catData as $key => $value):
-                                if($catObj['id']==$value['id']||in_array($value['id'],$catChildrenData)) //防止自己绑定自己，或者是当前的下级绑定父节点是你，你的父节点是你的下级，这样会造成脱离顶级树状根节点的问题，这样就会死循环，找不到相关的分类内容
-                                    continue;
-                                if($catObj['parent_id']==$value['id'])
-                                    $selected = "selected=\'selected\'\;";
-                                else
-                                    $selected = '';
+                        if($catObj['id']==$value['id']||in_array($value['id'],$catChildrenData))
+                        //防止自己绑定自己，或者是当前的下级绑定父节点是你，你的父节点是你的下级，这样会造成脱离顶级树状根节点的问题，这样就会死循环，找不到相关的分类内容
+                        continue;
+                        if($catObj['parent_id']==$value['id'])
+                        $selected = "selected=\'selected\'\;";
+                        else
+                        $selected = '';
                         ?>
                         <option value="<?php echo $value['id']?>"
                         <?php echo $selected;?>>
@@ -31,6 +32,15 @@
                 <td align="left">
                     <input type='text' name='cat_name' maxlength="20" value='<?php echo $catObj["cat_name"];?>'
                            size='27'/> <font color="red">*</font>
+                </td>
+            </tr>
+            <tr>
+                <td class="label">推荐到楼层：</td>
+                <td>
+                    <input type="radio" name="is_floor"
+                           value="是" <?php if($catObj['is_floor'] == '是') echo 'checked="checked"'; ?> /> 是
+                    <input type="radio" name="is_floor"
+                           value="否" <?php if($catObj['is_floor'] == '否') echo 'checked="checked"'; ?> /> 否
                 </td>
             </tr>
         </table>
