--- a/Application/Home/View/Index/index.html
+++ b/Application/Home/View/Index/index.html
@@ -156,7 +156,8 @@
                     <?php foreach($goodsCuXiao as $k => $v):?>
                     <li>
                         <dl>
-                            <dt><a href="<?php echo U('goods?id='.$v['id']);?>"><?php showImage($v['mid_logo']);?></a></dt>
+                            <dt><a href="<?php echo U('goods?id='.$v['id']);?>"><?php showImage($v['mid_logo']);?></a>
+                            </dt>
                             <dd><a href="<?php echo U('goods?id='.$v['id']);?>"><?php echo $v['goods_name'];?></a></dd>
                             <dd><span>售价:</span><strong>¥<?php echo $v['promote_price'];?>元</strong></dd>
                         </dl>
@@ -172,7 +173,8 @@
                     <?php foreach($goodsReMai as $k => $v):?>
                     <li>
                         <dl>
-                            <dt><a href="<?php echo U('goods?id='.$v['id']);?>"><?php showImage($v['mid_logo']);?></a></dt>
+                            <dt><a href="<?php echo U('goods?id='.$v['id']);?>"><?php showImage($v['mid_logo']);?></a>
+                            </dt>
                             <dd><a href="<?php echo U('goods?id='.$v['id']);?>"><?php echo $v['goods_name'];?></a></dd>
                             <dd><span>售价:</span><strong>¥<?php echo $v['promote_price'];?>元</strong></dd>
                         </dl>
@@ -188,7 +190,8 @@
                     <?php foreach($goodsJingPin as $k => $v):?>
                     <li>
                         <dl>
-                            <dt><a href="<?php echo U('goods?id='.$v['id']);?>"><?php showImage($v['mid_logo']);?></a></dt>
+                            <dt><a href="<?php echo U('goods?id='.$v['id']);?>"><?php showImage($v['mid_logo']);?></a>
+                            </dt>
                             <dd><a href="<?php echo U('goods?id='.$v['id']);?>"><?php echo $v['goods_name'];?></a></dd>
                             <dd><span>售价:</span><strong>¥<?php echo $v['promote_price'];?>元</strong></dd>
                         </dl>
@@ -204,7 +207,8 @@
                     <?php foreach($goodsXinPin as $k => $v):?>
                     <li>
                         <dl>
-                            <dt><a href="<?php echo U('goods?id='.$v['id']);?>"><?php showImage($v['mid_logo']);?></a></dt>
+                            <dt><a href="<?php echo U('goods?id='.$v['id']);?>"><?php showImage($v['mid_logo']);?></a>
+                            </dt>
                             <dd><a href="<?php echo U('goods?id='.$v['id']);?>"><?php echo $v['goods_name'];?></a></dd>
                             <dd><span>售价:</span><strong>¥<?php echo $v['promote_price'];?>元</strong></dd>
                         </dl>
@@ -220,7 +224,8 @@
                     <?php foreach($goodsCuXiao as $k => $v):?>
                     <li>
                         <dl>
-                            <dt><a href="<?php echo U('goods?id='.$v['id']);?>"><?php showImage($v['mid_logo']);?></a></dt>
+                            <dt><a href="<?php echo U('goods?id='.$v['id']);?>"><?php showImage($v['mid_logo']);?></a>
+                            </dt>
                             <dd><a href="<?php echo U('goods?id='.$v['id']);?>"><?php echo $v['goods_name'];?></a></dd>
                             <dd><span>售价:</span><strong>¥<?php echo $v['promote_price'];?>元</strong></dd>
                         </dl>
@@ -313,7 +318,8 @@
 
                         <li>
                             <dl>
-                                <dt><a href=""><img src="<?php echo C('HOME_IMG_URL');?>/thinkpad e420.jpg" alt=""/></a></dt>
+                                <dt><a href=""><img src="<?php echo C('HOME_IMG_URL');?>/thinkpad e420.jpg" alt=""/></a>
+                                </dt>
                                 <dd><a href="">ThinkPad E42014英寸笔..</a></dd>
                                 <dd><span>售价：</span> <strong>￥4199.00</strong></dd>
                             </dl>
@@ -329,7 +335,8 @@
 
                         <li>
                             <dl>
-                                <dt><a href=""><img src="<?php echo C('HOME_IMG_URL');?>/samsung6800.jpg" alt=""/></a></dt>
+                                <dt><a href=""><img src="<?php echo C('HOME_IMG_URL');?>/samsung6800.jpg" alt=""/></a>
+                                </dt>
                                 <dd><a href="">三星Galaxy Tab P6800.</a></dd>
                                 <dd><span>售价：</span> <strong>￥4699.00</strong></dd>
                             </dl>
@@ -345,7 +352,8 @@
 
                         <li>
                             <dl>
-                                <dt><a href=""><img src="<?php echo C('HOME_IMG_URL');?>/qinghuax2.jpg" alt=""/></a></dt>
+                                <dt><a href=""><img src="<?php echo C('HOME_IMG_URL');?>/qinghuax2.jpg" alt=""/></a>
+                                </dt>
                                 <dd><a href="">清华同方精锐X2笔记本 </a></dd>
                                 <dd><span>售价：</span> <strong>￥2499.00</strong></dd>
                             </dl>
@@ -365,7 +373,8 @@
 
                         <li>
                             <dl>
-                                <dt><a href=""><img src="<?php echo C('HOME_IMG_URL');?>/qinghuax2.jpg" alt=""/></a></dt>
+                                <dt><a href=""><img src="<?php echo C('HOME_IMG_URL');?>/qinghuax2.jpg" alt=""/></a>
+                                </dt>
                                 <dd><a href="">清华同方精锐X2笔记本 </a></dd>
                                 <dd><span>售价：</span> <strong>￥2499.00</strong></dd>
                             </dl>
@@ -378,7 +387,8 @@
                     <ul>
                         <li>
                             <dl>
-                                <dt><a href=""><img src="<?php echo C('HOME_IMG_URL');?>/thinkpad e420.jpg" alt=""/></a></dt>
+                                <dt><a href=""><img src="<?php echo C('HOME_IMG_URL');?>/thinkpad e420.jpg" alt=""/></a>
+                                </dt>
                                 <dd><a href="">ThinkPad E42014英寸笔..</a></dd>
                                 <dd><span>售价：</span> <strong>￥4199.00</strong></dd>
                             </dl>
@@ -406,7 +416,8 @@
 
                         <li>
                             <dl>
-                                <dt><a href=""><img src="<?php echo C('HOME_IMG_URL');?>/samsung6800.jpg" alt=""/></a></dt>
+                                <dt><a href=""><img src="<?php echo C('HOME_IMG_URL');?>/samsung6800.jpg" alt=""/></a>
+                                </dt>
                                 <dd><a href="">三星Galaxy Tab P6800.</a></dd>
                                 <dd><span>售价：</span> <strong>￥4699.00</strong></dd>
                             </dl>
@@ -418,7 +429,8 @@
                     <ul>
                         <li>
                             <dl>
-                                <dt><a href=""><img src="<?php echo C('HOME_IMG_URL');?>/samsung6800.jpg" alt=""/></a></dt>
+                                <dt><a href=""><img src="<?php echo C('HOME_IMG_URL');?>/samsung6800.jpg" alt=""/></a>
+                                </dt>
                                 <dd><a href="">三星Galaxy Tab P6800.</a></dd>
                                 <dd><span>售价：</span> <strong>￥4699.00</strong></dd>
                             </dl>
@@ -485,8 +497,248 @@
     <!-- 右侧 end -->
 
 </div>
-<!--1F 电脑办公 start -->
 
+<div style="clear:both;"></div>
+
+<pre>
+   <?php var_dump($floorData);?>
+</pre>
+
+
+<!-- 楼层数据开始 -->
+<?php foreach($floorData as $key => $value):?>
+<div class="floor1 floor w1210 bc mt10">
+    <!-- 1F 左侧 start -->
+    <div class="floor_left fl">
+        <!-- 商品分类信息 start-->
+        <div class="cate fl">
+            <h2><?php echo $value['']?></h2>
+            <div class="cate_wrap">
+                <ul>
+                    <li><a href=""><b>.</b>外设产品</a></li>
+                    <li><a href=""><b>.</b>鼠标</a></li>
+                    <li><a href=""><b>.</b>笔记本</a></li>
+                    <li><a href=""><b>.</b>超极本</a></li>
+                    <li><a href=""><b>.</b>平板电脑</a></li>
+                    <li><a href=""><b>.</b>主板</a></li>
+                    <li><a href=""><b>.</b>显卡</a></li>
+                    <li><a href=""><b>.</b>打印机</a></li>
+                    <li><a href=""><b>.</b>一体机</a></li>
+                    <li><a href=""><b>.</b>投影机</a></li>
+                    <li><a href=""><b>.</b>路由器</a></li>
+                    <li><a href=""><b>.</b>网卡</a></li>
+                    <li><a href=""><b>.</b>交换机</a></li>
+                </ul>
+                <p><a href=""><img src="<?php echo C('HOME_IMG_URL');?>/notebook.jpg" alt=""/></a></p>
+            </div>
+
+
+        </div>
+        <!-- 商品分类信息 end-->
+
+        <!-- 商品列表信息 start-->
+        <div class="goodslist fl">
+            <h2>
+                <span class="on">推荐商品</span>
+                <span>电脑整机</span>
+                <span>电脑配件</span>
+                <span>办公打印</span>
+                <span>网络产品</span>
+            </h2>
+            <div class="goodslist_wrap">
+                <div>
+                    <ul>
+                        <li>
+                            <dl>
+                                <dt><a href=""><img src="<?php echo C('HOME_IMG_URL');?>/hpG4.jpg" alt=""/></a></dt>
+                                <dd><a href="">惠普G4-1332TX 14英寸笔</a></dd>
+                                <dd><span>售价：</span> <strong>￥2999.00</strong></dd>
+                            </dl>
+                        </li>
+
+                        <li>
+                            <dl>
+                                <dt><a href=""><img src="<?php echo C('HOME_IMG_URL');?>/thinkpad e420.jpg" alt=""/></a>
+                                </dt>
+                                <dd><a href="">ThinkPad E42014英寸笔..</a></dd>
+                                <dd><span>售价：</span> <strong>￥4199.00</strong></dd>
+                            </dl>
+                        </li>
+
+                        <li>
+                            <dl>
+                                <dt><a href=""><img src="<?php echo C('HOME_IMG_URL');?>/acer4739.jpg" alt=""/></a></dt>
+                                <dd><a href="">宏碁AS4739-382G32Mnk</a></dd>
+                                <dd><span>售价：</span> <strong>￥2799.00</strong></dd>
+                            </dl>
+                        </li>
+
+                        <li>
+                            <dl>
+                                <dt><a href=""><img src="<?php echo C('HOME_IMG_URL');?>/samsung6800.jpg" alt=""/></a>
+                                </dt>
+                                <dd><a href="">三星Galaxy Tab P6800.</a></dd>
+                                <dd><span>售价：</span> <strong>￥4699.00</strong></dd>
+                            </dl>
+                        </li>
+
+                        <li>
+                            <dl>
+                                <dt><a href=""><img src="<?php echo C('HOME_IMG_URL');?>/lh531.jpg" alt=""/></a></dt>
+                                <dd><a href="">富士通LH531 14.1英寸笔记</a></dd>
+                                <dd><span>售价：</span> <strong>￥2189.00</strong></dd>
+                            </dl>
+                        </li>
+
+                        <li>
+                            <dl>
+                                <dt><a href=""><img src="<?php echo C('HOME_IMG_URL');?>/qinghuax2.jpg" alt=""/></a>
+                                </dt>
+                                <dd><a href="">清华同方精锐X2笔记本 </a></dd>
+                                <dd><span>售价：</span> <strong>￥2499.00</strong></dd>
+                            </dl>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="none">
+                    <ul>
+                        <li>
+                            <dl>
+                                <dt><a href=""><img src="<?php echo C('HOME_IMG_URL');?>/hpG4.jpg" alt=""/></a></dt>
+                                <dd><a href="">惠普G4-1332TX 14英寸笔</a></dd>
+                                <dd><span>售价：</span> <strong>￥2999.00</strong></dd>
+                            </dl>
+                        </li>
+
+                        <li>
+                            <dl>
+                                <dt><a href=""><img src="<?php echo C('HOME_IMG_URL');?>/qinghuax2.jpg" alt=""/></a>
+                                </dt>
+                                <dd><a href="">清华同方精锐X2笔记本 </a></dd>
+                                <dd><span>售价：</span> <strong>￥2499.00</strong></dd>
+                            </dl>
+                        </li>
+
+                    </ul>
+                </div>
+
+                <div class="none">
+                    <ul>
+                        <li>
+                            <dl>
+                                <dt><a href=""><img src="<?php echo C('HOME_IMG_URL');?>/thinkpad e420.jpg" alt=""/></a>
+                                </dt>
+                                <dd><a href="">ThinkPad E42014英寸笔..</a></dd>
+                                <dd><span>售价：</span> <strong>￥4199.00</strong></dd>
+                            </dl>
+                        </li>
+
+                        <li>
+                            <dl>
+                                <dt><a href=""><img src="<?php echo C('HOME_IMG_URL');?>/acer4739.jpg" alt=""/></a></dt>
+                                <dd><a href="">宏碁AS4739-382G32Mnk</a></dd>
+                                <dd><span>售价：</span> <strong>￥2799.00</strong></dd>
+                            </dl>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="none">
+                    <ul>
+                        <li>
+                            <dl>
+                                <dt><a href=""><img src="<?php echo C('HOME_IMG_URL');?>/acer4739.jpg" alt=""/></a></dt>
+                                <dd><a href="">宏碁AS4739-382G32Mnk</a></dd>
+                                <dd><span>售价：</span> <strong>￥2799.00</strong></dd>
+                            </dl>
+                        </li>
+
+                        <li>
+                            <dl>
+                                <dt><a href=""><img src="<?php echo C('HOME_IMG_URL');?>/samsung6800.jpg" alt=""/></a>
+                                </dt>
+                                <dd><a href="">三星Galaxy Tab P6800.</a></dd>
+                                <dd><span>售价：</span> <strong>￥4699.00</strong></dd>
+                            </dl>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="none">
+                    <ul>
+                        <li>
+                            <dl>
+                                <dt><a href=""><img src="<?php echo C('HOME_IMG_URL');?>/samsung6800.jpg" alt=""/></a>
+                                </dt>
+                                <dd><a href="">三星Galaxy Tab P6800.</a></dd>
+                                <dd><span>售价：</span> <strong>￥4699.00</strong></dd>
+                            </dl>
+                        </li>
+
+                        <li>
+                            <dl>
+                                <dt><a href=""><img src="<?php echo C('HOME_IMG_URL');?>/lh531.jpg" alt=""/></a></dt>
+                                <dd><a href="">富士通LH531 14.1英寸笔记</a></dd>
+                                <dd><span>售价：</span> <strong>￥2189.00</strong></dd>
+                            </dl>
+                        </li>
+                    </ul>
+                </div>
+
+            </div>
+        </div>
+        <!-- 商品列表信息 end-->
+    </div>
+    <!-- 1F 左侧 end -->
+
+    <!-- 右侧 start -->
+    <div class="sidebar fl ml10">
+        <!-- 品牌旗舰店 start -->
+        <div class="brand">
+            <h2><a href="">更多品牌&nbsp;></a><strong>品牌旗舰店</strong></h2>
+            <div class="sidebar_wrap">
+                <ul>
+                    <li><a href=""><img src="<?php echo C('HOME_IMG_URL');?>/dell.gif" alt=""/></a></li>
+                    <li><a href=""><img src="<?php echo C('HOME_IMG_URL');?>/acer.gif" alt=""/></a></li>
+                    <li><a href=""><img src="<?php echo C('HOME_IMG_URL');?>/fujitsu.jpg" alt=""/></a></li>
+                    <li><a href=""><img src="<?php echo C('HOME_IMG_URL');?>/hp.jpg" alt=""/></a></li>
+                    <li><a href=""><img src="<?php echo C('HOME_IMG_URL');?>/lenove.jpg" alt=""/></a></li>
+                    <li><a href=""><img src="<?php echo C('HOME_IMG_URL');?>/samsung.gif" alt=""/></a></li>
+                    <li><a href=""><img src="<?php echo C('HOME_IMG_URL');?>/dlink.gif" alt=""/></a></li>
+                    <li><a href=""><img src="<?php echo C('HOME_IMG_URL');?>/seagate.jpg" alt=""/></a></li>
+                    <li><a href=""><img src="<?php echo C('HOME_IMG_URL');?>/intel.jpg" alt=""/></a></li>
+                </ul>
+            </div>
+        </div>
+        <!-- 品牌旗舰店 end -->
+
+        <!-- 分类资讯 start -->
+        <div class="info mt10">
+            <h2><strong>分类资讯</strong></h2>
+            <div class="sidebar_wrap">
+                <ul>
+                    <li><a href=""><b>.</b>iphone 5s土豪金大量到货</a></li>
+                    <li><a href=""><b>.</b>三星note 3低价促销</a></li>
+                    <li><a href=""><b>.</b>thinkpad x240即将上市</a></li>
+                    <li><a href=""><b>.</b>双十一来临，众商家血拼</a></li>
+                </ul>
+            </div>
+
+        </div>
+        <!-- 分类资讯 end -->
+
+        <!-- 广告 start -->
+        <div class="ads mt10">
+            <a href=""><img src="<?php echo C('HOME_IMG_URL');?>/canon.jpg" alt=""/></a>
+        </div>
+        <!-- 广告 end -->
+    </div>
+    <!-- 右侧 end -->
+
+</div>
+<?php endforeach;?>
+<!--楼层数据结束-->
 
 <div style="clear:both;"></div>
 
